--- a/indeex.html
+++ b/indeex.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="跳转链接";
+location.href="https://woaqp.cos.mh-shanghai.cssfwl.cn/tz/";
 </script>
 </body>
 </html>
